--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   update-changelog:
-    if: github.repository_owner == 'nuxt' && !startsWith(github.event.head_commit.message, 'v')
+    if: github.repository_owner != 'nuxt' && !startsWith(github.event.head_commit.message, 'v')
     runs-on: ubuntu-latest
 
     steps:
