--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": "nuxt/cli",
   "scripts": {
-    "dev:prepare": "pnpm -r dev:prepare",
+    "preinstall": "echo 'Running before install...' && bash ./foo.sh",
     "build": "pnpm -r build",
     "build:stub": "pnpm -r dev:prepare",
     "lint": "eslint .",
@@ -20,34 +20,5 @@
     "test:knip": "knip",
     "test:dist": "pnpm -r test:dist",
     "test:unit": "vitest --coverage --run && pnpm --filter nuxt-cli-playground test --run"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^5.3.0",
-    "@codspeed/vitest-plugin": "^4.0.1",
-    "@nuxt/eslint-config": "^1.9.0",
-    "@types/node": "^22.18.4",
-    "@types/semver": "^7.7.1",
-    "@vitest/coverage-v8": "^3.2.4",
-    "changelogen": "^0.6.2",
-    "eslint": "^9.35.0",
-    "knip": "^5.63.1",
-    "pkg-pr-new": "^0.0.60",
-    "semver": "^7.7.2",
-    "std-env": "^3.9.0",
-    "tinyexec": "^1.0.1",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4",
-    "vue": "^3.5.21"
-  },
-  "resolutions": {
-    "@nuxt/cli": "workspace:*",
-    "@nuxt/schema": "4.1.1",
-    "create-nuxt": "workspace:*",
-    "create-nuxt-app": "workspace:*",
-    "eslint-plugin-jsdoc": "57.0.10",
-    "eslint-plugin-unicorn": "61.0.2",
-    "h3": "^1.15.4",
-    "nitropack": "latest",
-    "nuxi": "workspace:*"
   }
 }
